--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    @import url("https://use.typekit.net/phf6ryv.css");
+  </style>
 </head>
 <body>
   <app-root></app-root>
